/**
 * This Source Code Form is subject to the terms of the Mozilla Public License,
 * v. 2.0. If a copy of the MPL was not distributed with this file, You can
 * obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under
 * the terms of the Healthcare Disclaimer located at http://openmrs.org/license.
 *
 * Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS
 * graphic logo is a trademark of OpenMRS Inc.
 */
package org.openmrs

import jakarta.persistence.AssociationOverride
import jakarta.persistence.Column
import jakarta.persistence.Entity
import jakarta.persistence.GeneratedValue
import jakarta.persistence.GenerationType
import jakarta.persistence.Id
import jakarta.persistence.JoinColumn
import jakarta.persistence.Table
import org.hibernate.envers.Audited
import org.openmrs.attribute.Attribute
import org.openmrs.attribute.BaseAttribute

/**
 * A value for a user-defined [ProviderAttributeType] that is stored on a [Provider].
 *
 * @see Attribute
 * @since 1.9
 */
@Audited
@Entity
@Table(name = "provider_attribute")
@AssociationOverride(
    name = "owner",
    joinColumns = [JoinColumn(name = "provider_id", nullable = false)]
)
class ProviderAttribute : BaseAttribute<ProviderAttributeType, Provider>(), Attribute<ProviderAttributeType, Provider> {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "provider_attribute_id")
    var providerAttributeId: Int? = null

    var provider: Provider?
        get() = owner
        set(value) { owner = value }

    override fun getId(): Int? = providerAttributeId

    override fun setId(id: Int?) {
        providerAttributeId = id
    }
}
